# object_detection_challenge_preligens

./: README.md  pyproject.toml
data_voc_to_yml/: convert_voc_to_yaml.py
data_voc_to_yml/UAVOD_yolo/: UAVOD.yaml  classes.txt  labels.cache  train.txt  val.txt
data_voc_to_yml/UAVOD_yolo/labels/: 1.txt  10.txt  100.txt  101.txt  102.txt  103.txt  104.txt  105.txt  106.txt  107.txt  108.txt  109.txt  11.txt  110.txt  111.txt  112.txt  113.txt  114.txt  115.txt  116.txt  117.txt  118.txt  119.txt  12.txt  120.txt  121.txt  122.txt  123.txt  124.txt  125.txt  126.txt  127.txt  128.txt  129.txt  13.txt  130.txt  131.txt  132.txt  133.txt  134.txt  (+804 more)
data_voc_to_yml/small-weak-UVA-object-dataset/Annotations/: 1.xml  10.xml  100.xml  101.xml  102.xml  103.xml  104.xml  105.xml  106.xml  107.xml  108.xml  109.xml  11.xml  110.xml  111.xml  112.xml  113.xml  114.xml  115.xml  116.xml  117.xml  118.xml  119.xml  12.xml  120.xml  121.xml  122.xml  123.xml  124.xml  125.xml  126.xml  127.xml  128.xml  129.xml  13.xml  130.xml  131.xml  132.xml  133.xml  134.xml  (+804 more)
data_voc_to_yml/testing_video/: 1263198-sd_640_360_30fps.mp4:Zone.Identifier  2254234-sd_426_240_24fps.mp4:Zone.Identifier  3121459-sd_426_240_24fps.mp4:Zone.Identifier
object_detection_challenge_preligens/: inference.py  train.py
object_detection_challenge_preligens/output/: output_results.txt  output_results_2254234.txt
runs/detect/train/: args.yaml
runs/detect/train2/: args.yaml
runs/detect/train3/: args.yaml  results.csv
